--- a/env/farm2fork_otmd/development.ini
+++ b/env/farm2fork_otmd/development.ini
@@ -7,7 +7,8 @@ pyramid.debug_notfound = false
 pyramid.debug_routematch = false
 pyramid.default_locale_name = en
 pyramid.includes = 
-    pyramid_debugtoolbar
+
+mako.directories = farm2fork_otmd:templates
 
 [server:main]
 use = egg:waitress#main
