--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,2 @@
 include *.txt *.ini *.cfg *.rst
-recursive-include farm2fork_otmd *.ico *.png *.css *.gif *.jpg *.pt *.txt *.mak *.mako *.js *.html *.xml
+recursive-include farm2fork_otmd *.ico *.png *.css *.gif *.jpg *.txt *.mak *.mako *.js *.html
